# agent-browser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  action.yml  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: action-smoke.yml
crates/agent_browser_cli/: Cargo.toml
crates/agent_browser_core/: Cargo.toml
demo/: create-install-video.sh
docs/: ARCHITECTURE.md  CHECKS.md  CODRA_DEPLOY_INTEGRATION.md  GITHUB_ACTION.md  HOSTED_API.md  RELEASE.md  SAFETY.md  SESSIONS.md  VISION.md
docs/examples/: external-verification.md
docs/release/: v0.2.0-demo-script.md  v0.2.0-demo-shotlist.md  v0.2.0-release-notes.md  v0.2.0-social-post.md
examples/: basic-navigation.ts
examples/api/: check.sh  node-client.mjs  session-report.sh
examples/github-action/: basic.yml  browser-check.yml  codra-deploy-post-deploy.yml  codra-deploy-smoke.yml  external-smoke.yml  with-screenshot.yml  with-vision.yml
examples/sessions/: codra-browser-check.md  deploy-validation.md  (+1 more)
fixtures/: docs.html  example.html
python/agent-browser-vision/: README.md  pyproject.toml
python/agent-browser-vision/agent_browser_vision/: __init__.py  cli.py  diff.py  inspect.py
python/agent-browser-vision/tests/: test_cli.py  test_diff.py  test_inspect.py
scripts/: demo-v020.sh
src/: action.ts  cli.ts  index.ts
tests/: action-decisions.test.ts  api.test.ts  check.test.ts  cli.test.ts  mcp-browser-check.test.ts  provider.test.ts  safety.test.ts  screenshot.test.ts  sessions-cli.test.ts  sessions.test.ts  snapshot.test.ts  vision-bridge.test.ts
(+38 files in other folders)
