[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-browser-vision"
version = "0.1.0"
description = "Optional OpenCV screenshot inspection for Agent Browser"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agent-browser-vision = "agent_browser_vision.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_browser_vision*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]